--- a/Personapi/pom.xml
+++ b/Personapi/pom.xml
@@ -48,6 +48,15 @@
             <artifactId>lombok</artifactId>
         </dependency>
         <dependency>
+    <groupId>javax.validation</groupId>
+    <artifactId>validation-api</artifactId>
+</dependency>
+<dependency>
+    <groupId>org.hibernate.validator</groupId>
+    <artifactId>hibernate-validator</artifactId>
+   
+</dependency>
+        <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
             <version>1.3.1.Final</version>
